--- a/spacedRepetition.org
+++ b/spacedRepetition.org
@@ -33,12 +33,12 @@ Mark was apoplectic with rage at the decision
   :ID:       e52dcdd5-23f4-4c37-8d36-9b9b3e47ad62
   :DRILL_LAST_INTERVAL: 0.0
   :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 10
-  :DRILL_FAILURE_COUNT: 7
-  :DRILL_AVERAGE_QUALITY: 1.901
+  :DRILL_TOTAL_REPEATS: 11
+  :DRILL_FAILURE_COUNT: 8
+  :DRILL_AVERAGE_QUALITY: 1.91
   :DRILL_EASE: 2.22
-  :DRILL_LAST_QUALITY: 1
-  :DRILL_LAST_REVIEWED: [2018-11-12 Mon 16:11]
+  :DRILL_LAST_QUALITY: 2
+  :DRILL_LAST_REVIEWED: [2018-12-09 Sun 13:13]
   :END:
 Define the phrase
 **** English
@@ -54,12 +54,12 @@ the sui generis nature of animals
   :ID:       e4f76d52-7774-4136-ac32-a62fb3afac17
   :DRILL_LAST_INTERVAL: 0.0
   :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 12
-  :DRILL_FAILURE_COUNT: 9
-  :DRILL_AVERAGE_QUALITY: 1.582
+  :DRILL_TOTAL_REPEATS: 13
+  :DRILL_FAILURE_COUNT: 10
+  :DRILL_AVERAGE_QUALITY: 1.537
   :DRILL_EASE: 2.36
   :DRILL_LAST_QUALITY: 1
-  :DRILL_LAST_REVIEWED: [2018-11-12 Mon 16:12]
+  :DRILL_LAST_REVIEWED: [2018-12-09 Sun 13:14]
   :END:
 Define the word
 **** English
@@ -71,18 +71,18 @@ Cutting-edge young people were calling themselves neo-liberal, adopting a term
 that had been anathema only a few years earlier.
 
 *** Adjective :drill:
-    SCHEDULED: <2018-11-17 Sat>
+    SCHEDULED: <2018-12-22 Sat>
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
   :ID:       df98658b-d200-455f-85ea-58e8e90a6196
-  :DRILL_LAST_INTERVAL: 4.7411
-  :DRILL_REPEATS_SINCE_FAIL: 2
-  :DRILL_TOTAL_REPEATS: 7
+  :DRILL_LAST_INTERVAL: 13.2386
+  :DRILL_REPEATS_SINCE_FAIL: 3
+  :DRILL_TOTAL_REPEATS: 8
   :DRILL_FAILURE_COUNT: 3
-  :DRILL_AVERAGE_QUALITY: 3.0
+  :DRILL_AVERAGE_QUALITY: 3.125
   :DRILL_EASE: 2.7
-  :DRILL_LAST_QUALITY: 5
-  :DRILL_LAST_REVIEWED: [2018-11-12 Mon 16:10]
+  :DRILL_LAST_QUALITY: 4
+  :DRILL_LAST_REVIEWED: [2018-12-09 Sun 13:15]
   :END:
 Define the word
 **** English
@@ -94,23 +94,24 @@ As a result of having studied abroad several years, Helen has become quite
 erudite on the subject of art history.
 
 *** Noun                                                        :drill:
+    SCHEDULED: <2018-12-13 Thu>
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
   :ID:       fecbd2de-fd88-43ca-81fc-8a302b234284
-  :DRILL_LAST_INTERVAL: 0.0
-  :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 7
+  :DRILL_LAST_INTERVAL: 3.9728
+  :DRILL_REPEATS_SINCE_FAIL: 2
+  :DRILL_TOTAL_REPEATS: 8
   :DRILL_FAILURE_COUNT: 4
-  :DRILL_AVERAGE_QUALITY: 2.429
+  :DRILL_AVERAGE_QUALITY: 2.625
   :DRILL_EASE: 2.6
-  :DRILL_LAST_QUALITY: 1
-  :DRILL_LAST_REVIEWED: [2018-11-12 Mon 16:11]
+  :DRILL_LAST_QUALITY: 4
+  :DRILL_LAST_REVIEWED: [2018-12-09 Sun 13:11]
   :END:
 Define the word
 **** English
 quince
 **** Definition
-The fuit of a central Asian tree of the rose famiy that resembles a hard-fleshed
+The fruit of a central Asian tree of the rose famiy that resembles a hard-fleshed
 yellow apple. Is used especially in preserves.
 
 
@@ -131,18 +132,18 @@ The us of words to express something other than and especially the opposite of
 the literal meaning
 
 *** Adjective :drill:
-    SCHEDULED: <2018-11-10 Sat>
+    SCHEDULED: <2018-12-16 Sun>
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
   :ID:       4a82cb00-118c-4a69-87f3-70e5837b7697
-  :DRILL_LAST_INTERVAL: 3.872
-  :DRILL_REPEATS_SINCE_FAIL: 2
-  :DRILL_TOTAL_REPEATS: 8
+  :DRILL_LAST_INTERVAL: 7.2215
+  :DRILL_REPEATS_SINCE_FAIL: 3
+  :DRILL_TOTAL_REPEATS: 9
   :DRILL_FAILURE_COUNT: 4
-  :DRILL_AVERAGE_QUALITY: 2.875
-  :DRILL_EASE: 2.36
-  :DRILL_LAST_QUALITY: 4
-  :DRILL_LAST_REVIEWED: [2018-11-06 Tue 11:37]
+  :DRILL_AVERAGE_QUALITY: 2.889
+  :DRILL_EASE: 2.22
+  :DRILL_LAST_QUALITY: 3
+  :DRILL_LAST_REVIEWED: [2018-12-09 Sun 13:14]
   :END:
 Define the word
 **** English
@@ -158,12 +159,12 @@ lacking physical or mental energy; sluggish
   :ID:       ae472f6f-1fb1-4149-8963-edcfb690a34b
   :DRILL_LAST_INTERVAL: 0.0
   :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 13
-  :DRILL_FAILURE_COUNT: 10
-  :DRILL_AVERAGE_QUALITY: 1.692
+  :DRILL_TOTAL_REPEATS: 14
+  :DRILL_FAILURE_COUNT: 11
+  :DRILL_AVERAGE_QUALITY: 1.714
   :DRILL_EASE: 2.36
-  :DRILL_LAST_QUALITY: 1
-  :DRILL_LAST_REVIEWED: [2018-11-12 Mon 16:12]
+  :DRILL_LAST_QUALITY: 2
+  :DRILL_LAST_REVIEWED: [2018-12-09 Sun 13:13]
   :END:
 Define the word
 **** English
@@ -176,18 +177,18 @@ lacking in qualities that interest, stimulate, or challenge; dull, flat
 The soup was rather insipid
 
 *** Adjective                                                         :drill:
-    SCHEDULED: <2018-12-07 Fri>
+    SCHEDULED: <2019-02-23 Sat>
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
   :ID:       80e1435a-f047-4c85-b4c8-0553b9de165c
-  :DRILL_LAST_INTERVAL: 30.7561
-  :DRILL_REPEATS_SINCE_FAIL: 4
-  :DRILL_TOTAL_REPEATS: 4
+  :DRILL_LAST_INTERVAL: 76.3974
+  :DRILL_REPEATS_SINCE_FAIL: 5
+  :DRILL_TOTAL_REPEATS: 5
   :DRILL_FAILURE_COUNT: 1
-  :DRILL_AVERAGE_QUALITY: 3.75
-  :DRILL_EASE: 2.56
-  :DRILL_LAST_QUALITY: 5
-  :DRILL_LAST_REVIEWED: [2018-11-06 Tue 13:36]
+  :DRILL_AVERAGE_QUALITY: 3.6
+  :DRILL_EASE: 2.42
+  :DRILL_LAST_QUALITY: 3
+  :DRILL_LAST_REVIEWED: [2018-12-09 Sun 13:15]
   :END:
 Define the word
 **** English
@@ -227,18 +228,17 @@ in regards to race.
 Kanye has been in a sunken place
 
 *** Adjective, Noun, Verb :drill:
-    SCHEDULED: <2018-11-16 Fri>
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
   :ID:       bf6b6df7-fe1a-4379-851d-e6d61c9542a7
-  :DRILL_LAST_INTERVAL: 3.7297
-  :DRILL_REPEATS_SINCE_FAIL: 2
-  :DRILL_TOTAL_REPEATS: 5
-  :DRILL_FAILURE_COUNT: 2
-  :DRILL_AVERAGE_QUALITY: 2.8
+  :DRILL_LAST_INTERVAL: 0.0
+  :DRILL_REPEATS_SINCE_FAIL: 1
+  :DRILL_TOTAL_REPEATS: 6
+  :DRILL_FAILURE_COUNT: 3
+  :DRILL_AVERAGE_QUALITY: 2.667
   :DRILL_EASE: 2.36
-  :DRILL_LAST_QUALITY: 4
-  :DRILL_LAST_REVIEWED: [2018-11-12 Mon 16:09]
+  :DRILL_LAST_QUALITY: 2
+  :DRILL_LAST_REVIEWED: [2018-12-09 Sun 13:15]
   :END:
 Define the word
 **** English
@@ -263,12 +263,12 @@ and preunderstandings.
   :ID:       4f31c516-439a-46df-9737-6ff82947c4d5
   :DRILL_LAST_INTERVAL: 0.0
   :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 13
-  :DRILL_FAILURE_COUNT: 11
-  :DRILL_AVERAGE_QUALITY: 1.615
+  :DRILL_TOTAL_REPEATS: 14
+  :DRILL_FAILURE_COUNT: 12
+  :DRILL_AVERAGE_QUALITY: 1.642
   :DRILL_EASE: 2.36
-  :DRILL_LAST_QUALITY: 1
-  :DRILL_LAST_REVIEWED: [2018-11-12 Mon 16:11]
+  :DRILL_LAST_QUALITY: 2
+  :DRILL_LAST_REVIEWED: [2018-12-09 Sun 13:11]
   :END:
 Define the word
 **** English
@@ -277,35 +277,34 @@ semiotics
 The study of signs and symbols and their use or interpretation
 
 *** Fact :drill:
-    SCHEDULED: <2018-12-02 Sun>
+    SCHEDULED: <2019-02-09 Sat>
   :PROPERTIES:
   :DRILL_CARD_TYPE: hide1cloze
   :ID:       55faead9-1faf-45df-9400-719b832bcc0e
-  :DRILL_LAST_INTERVAL: 26.3742
-  :DRILL_REPEATS_SINCE_FAIL: 4
-  :DRILL_TOTAL_REPEATS: 4
+  :DRILL_LAST_INTERVAL: 61.8249
+  :DRILL_REPEATS_SINCE_FAIL: 5
+  :DRILL_TOTAL_REPEATS: 5
   :DRILL_FAILURE_COUNT: 1
-  :DRILL_AVERAGE_QUALITY: 3.0
+  :DRILL_AVERAGE_QUALITY: 3.2
   :DRILL_EASE: 2.36
   :DRILL_LAST_QUALITY: 4
-  :DRILL_LAST_REVIEWED: [2018-11-06 Tue 13:36]
+  :DRILL_LAST_REVIEWED: [2018-12-09 Sun 13:15]
   :END:
 [Epistemology] is the branch of philosophy concerned with the theory of
 [knowledge].
 
 *** Fact :drill:
-    SCHEDULED: <2018-12-03 Mon>
   :PROPERTIES:
   :DRILL_CARD_TYPE: hide1cloze
   :ID:       fd88df70-8678-424c-a897-42b347a0002c
-  :DRILL_LAST_INTERVAL: 27.2632
-  :DRILL_REPEATS_SINCE_FAIL: 4
-  :DRILL_TOTAL_REPEATS: 5
-  :DRILL_FAILURE_COUNT: 2
-  :DRILL_AVERAGE_QUALITY: 2.8
+  :DRILL_LAST_INTERVAL: 0.0
+  :DRILL_REPEATS_SINCE_FAIL: 1
+  :DRILL_TOTAL_REPEATS: 6
+  :DRILL_FAILURE_COUNT: 3
+  :DRILL_AVERAGE_QUALITY: 2.667
   :DRILL_EASE: 2.36
-  :DRILL_LAST_QUALITY: 3
-  :DRILL_LAST_REVIEWED: [2018-11-06 Tue 13:37]
+  :DRILL_LAST_QUALITY: 2
+  :DRILL_LAST_REVIEWED: [2018-12-09 Sun 13:15]
   :END:
 [Ontology] is the philosophical study of [being. It studies concepts that
 directly relate to being, in particular becoming, existence, reality.]
@@ -316,12 +315,12 @@ directly relate to being, in particular becoming, existence, reality.]
   :ID:       2f0293bf-b1e9-4e87-9c1a-818e5e9cbdab
   :DRILL_LAST_INTERVAL: 0.0
   :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 9
-  :DRILL_FAILURE_COUNT: 8
-  :DRILL_AVERAGE_QUALITY: 1.221
+  :DRILL_TOTAL_REPEATS: 10
+  :DRILL_FAILURE_COUNT: 9
+  :DRILL_AVERAGE_QUALITY: 1.299
   :DRILL_EASE: 2.36
-  :DRILL_LAST_QUALITY: 1
-  :DRILL_LAST_REVIEWED: [2018-11-12 Mon 16:11]
+  :DRILL_LAST_QUALITY: 2
+  :DRILL_LAST_REVIEWED: [2018-12-09 Sun 13:12]
   :END:
 Define the word
 **** English
@@ -332,18 +331,17 @@ intelligence achieved far ahead of normal development schedules
 There is a limited branch of children whose precocity has led them to be deemed genuises.
 
 *** Adjective :drill:
-    SCHEDULED: <2018-11-09 Fri>
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
   :ID:       71b134e4-084c-4c64-ab68-661818dd23f4
-  :DRILL_LAST_INTERVAL: 3.499
-  :DRILL_REPEATS_SINCE_FAIL: 2
-  :DRILL_TOTAL_REPEATS: 7
-  :DRILL_FAILURE_COUNT: 5
-  :DRILL_AVERAGE_QUALITY: 2.143
+  :DRILL_LAST_INTERVAL: 0.0
+  :DRILL_REPEATS_SINCE_FAIL: 1
+  :DRILL_TOTAL_REPEATS: 8
+  :DRILL_FAILURE_COUNT: 6
+  :DRILL_AVERAGE_QUALITY: 2.125
   :DRILL_EASE: 2.36
-  :DRILL_LAST_QUALITY: 3
-  :DRILL_LAST_REVIEWED: [2018-11-06 Tue 13:35]
+  :DRILL_LAST_QUALITY: 2
+  :DRILL_LAST_REVIEWED: [2018-12-09 Sun 13:14]
   :END:
 Define the word
 **** English
@@ -359,12 +357,12 @@ Gary was unflappable in his handling of the buses getting stuck in the mud.
   :ID:       ef491477-ccb8-4db2-972f-5ab9f773b089
   :DRILL_LAST_INTERVAL: 0.0
   :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 9
-  :DRILL_FAILURE_COUNT: 8
-  :DRILL_AVERAGE_QUALITY: 1.445
+  :DRILL_TOTAL_REPEATS: 10
+  :DRILL_FAILURE_COUNT: 9
+  :DRILL_AVERAGE_QUALITY: 1.4
   :DRILL_EASE: 2.36
   :DRILL_LAST_QUALITY: 1
-  :DRILL_LAST_REVIEWED: [2018-11-12 Mon 16:10]
+  :DRILL_LAST_REVIEWED: [2018-12-09 Sun 13:13]
   :END:
 Define the word
 **** English
@@ -376,18 +374,17 @@ The verisimilitude of her performance is gripping.
 
 
 *** Noun                                                        :drill:
-    SCHEDULED: <2018-11-10 Sat>
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
   :ID:       0112f1c2-b988-48db-a6a4-48877adce953
-  :DRILL_LAST_INTERVAL: 4.395
-  :DRILL_REPEATS_SINCE_FAIL: 2
-  :DRILL_TOTAL_REPEATS: 3
-  :DRILL_FAILURE_COUNT: 2
-  :DRILL_AVERAGE_QUALITY: 1.667
+  :DRILL_LAST_INTERVAL: 0.0
+  :DRILL_REPEATS_SINCE_FAIL: 1
+  :DRILL_TOTAL_REPEATS: 4
+  :DRILL_FAILURE_COUNT: 3
+  :DRILL_AVERAGE_QUALITY: 1.75
   :DRILL_EASE: 2.36
-  :DRILL_LAST_QUALITY: 3
-  :DRILL_LAST_REVIEWED: [2018-11-06 Tue 13:33]
+  :DRILL_LAST_QUALITY: 2
+  :DRILL_LAST_REVIEWED: [2018-12-09 Sun 13:14]
   :END:
 Define the word
 **** English
@@ -401,18 +398,18 @@ obscurantism, and to put the claims of a sect above those of human
 society.
 
 *** Adjective, Noun, Verb :drill:
-    SCHEDULED: <2018-11-01 Thu>
+    SCHEDULED: <2019-01-21 Mon>
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
   :ID:       e961da54-db55-4e60-b344-9b7a00100860
-  :DRILL_LAST_INTERVAL: 16.7014
-  :DRILL_REPEATS_SINCE_FAIL: 3
-  :DRILL_TOTAL_REPEATS: 2
+  :DRILL_LAST_INTERVAL: 42.7714
+  :DRILL_REPEATS_SINCE_FAIL: 4
+  :DRILL_TOTAL_REPEATS: 3
   :DRILL_FAILURE_COUNT: 0
-  :DRILL_AVERAGE_QUALITY: 5.0
-  :DRILL_EASE: 2.7
-  :DRILL_LAST_QUALITY: 5
-  :DRILL_LAST_REVIEWED: [2018-10-15 Mon 14:17]
+  :DRILL_AVERAGE_QUALITY: 4.333
+  :DRILL_EASE: 2.56
+  :DRILL_LAST_QUALITY: 3
+  :DRILL_LAST_REVIEWED: [2018-12-09 Sun 13:14]
   :END:
 Define the word
 **** English
@@ -426,18 +423,17 @@ society.
 
 
 *** Noun                                                        :drill:
-    SCHEDULED: <2018-11-10 Sat>
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
   :ID:       92440648-6112-4c8f-9a0a-e05313b9a8f5
-  :DRILL_LAST_INTERVAL: 3.8466
-  :DRILL_REPEATS_SINCE_FAIL: 2
-  :DRILL_TOTAL_REPEATS: 5
-  :DRILL_FAILURE_COUNT: 4
-  :DRILL_AVERAGE_QUALITY: 1.6
+  :DRILL_LAST_INTERVAL: 0.0
+  :DRILL_REPEATS_SINCE_FAIL: 1
+  :DRILL_TOTAL_REPEATS: 6
+  :DRILL_FAILURE_COUNT: 5
+  :DRILL_AVERAGE_QUALITY: 1.667
   :DRILL_EASE: 2.36
-  :DRILL_LAST_QUALITY: 3
-  :DRILL_LAST_REVIEWED: [2018-11-06 Tue 11:36]
+  :DRILL_LAST_QUALITY: 2
+  :DRILL_LAST_REVIEWED: [2018-12-09 Sun 13:14]
   :END:
 Define the word
 **** English
@@ -454,12 +450,12 @@ one word answers.
   :ID:       ac519bac-9307-4807-bb99-dd6304d3ae54
   :DRILL_LAST_INTERVAL: 0.0
   :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 4
-  :DRILL_FAILURE_COUNT: 4
-  :DRILL_AVERAGE_QUALITY: 1.25
+  :DRILL_TOTAL_REPEATS: 5
+  :DRILL_FAILURE_COUNT: 5
+  :DRILL_AVERAGE_QUALITY: 1.4
   :DRILL_EASE: 2.5
   :DRILL_LAST_QUALITY: 2
-  :DRILL_LAST_REVIEWED: [2018-11-12 Mon 16:09]
+  :DRILL_LAST_REVIEWED: [2018-12-09 Sun 13:12]
   :END:
 Define the word
 **** English
@@ -490,12 +486,12 @@ The legal parlance used by attorneys has its roots in the Latin language.
   :ID:       8c9463bd-afaa-42c8-8cc2-fc44f75ef34b
   :DRILL_LAST_INTERVAL: 0.0
   :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 4
-  :DRILL_FAILURE_COUNT: 4
-  :DRILL_AVERAGE_QUALITY: 1.0
+  :DRILL_TOTAL_REPEATS: 5
+  :DRILL_FAILURE_COUNT: 5
+  :DRILL_AVERAGE_QUALITY: 1.2
   :DRILL_EASE: 2.5
-  :DRILL_LAST_QUALITY: 1
-  :DRILL_LAST_REVIEWED: [2018-11-12 Mon 16:11]
+  :DRILL_LAST_QUALITY: 2
+  :DRILL_LAST_REVIEWED: [2018-12-09 Sun 13:13]
   :END:
 Define the word
 **** English
@@ -518,12 +514,12 @@ nature spirit with ears and a tail resembling those of a horse.
   :ID:       e1d06f2f-5094-474e-975c-d8d6730d444d
   :DRILL_LAST_INTERVAL: 0.0
   :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 5
-  :DRILL_FAILURE_COUNT: 4
+  :DRILL_TOTAL_REPEATS: 6
+  :DRILL_FAILURE_COUNT: 5
   :DRILL_AVERAGE_QUALITY: 2.0
   :DRILL_EASE: 2.36
   :DRILL_LAST_QUALITY: 2
-  :DRILL_LAST_REVIEWED: [2018-11-12 Mon 16:10]
+  :DRILL_LAST_REVIEWED: [2018-12-09 Sun 13:12]
   :END:
 Define the word
 **** English
@@ -535,6 +531,14 @@ silly nonsense
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
   :ID:       d4cbfb59-d109-4cb9-ba43-68dedd3095bb
+  :DRILL_LAST_INTERVAL: 0.0
+  :DRILL_REPEATS_SINCE_FAIL: 1
+  :DRILL_TOTAL_REPEATS: 1
+  :DRILL_FAILURE_COUNT: 1
+  :DRILL_AVERAGE_QUALITY: 1.0
+  :DRILL_EASE: 2.5
+  :DRILL_LAST_QUALITY: 1
+  :DRILL_LAST_REVIEWED: [2018-12-09 Sun 13:16]
   :END:
 Define the word
 **** English
@@ -565,12 +569,12 @@ disorder or a desired malediction.
   :ID:       7f9ec970-a040-4a7d-87f6-c779981825db
   :DRILL_LAST_INTERVAL: 0.0
   :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 3
-  :DRILL_FAILURE_COUNT: 3
+  :DRILL_TOTAL_REPEATS: 4
+  :DRILL_FAILURE_COUNT: 4
   :DRILL_AVERAGE_QUALITY: 1.0
   :DRILL_EASE: 2.5
   :DRILL_LAST_QUALITY: 1
-  :DRILL_LAST_REVIEWED: [2018-11-12 Mon 16:11]
+  :DRILL_LAST_REVIEWED: [2018-12-09 Sun 13:12]
   :END:
 Define the word
 **** English
@@ -602,12 +606,12 @@ Yet to them we can impute none of history's great convulsions
   :ID:       697fe722-2239-4da7-b5c8-e7600a942a9c
   :DRILL_LAST_INTERVAL: 0.0
   :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 4
-  :DRILL_FAILURE_COUNT: 4
-  :DRILL_AVERAGE_QUALITY: 1.0
+  :DRILL_TOTAL_REPEATS: 5
+  :DRILL_FAILURE_COUNT: 5
+  :DRILL_AVERAGE_QUALITY: 1.2
   :DRILL_EASE: 2.5
-  :DRILL_LAST_QUALITY: 1
-  :DRILL_LAST_REVIEWED: [2018-11-12 Mon 16:11]
+  :DRILL_LAST_QUALITY: 2
+  :DRILL_LAST_REVIEWED: [2018-12-09 Sun 13:13]
   :END:
 Define the word
 **** English
@@ -631,18 +635,17 @@ coming or having recently come into existence
 her nascent singing career
 
 *** Noun                                                        :drill:
-    SCHEDULED: <2018-11-16 Fri>
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
   :ID:       06a40333-0522-405f-aa65-9fc1e20cf16c
-  :DRILL_LAST_INTERVAL: 4.1767
-  :DRILL_REPEATS_SINCE_FAIL: 2
-  :DRILL_TOTAL_REPEATS: 4
-  :DRILL_FAILURE_COUNT: 3
-  :DRILL_AVERAGE_QUALITY: 2.0
+  :DRILL_LAST_INTERVAL: 0.0
+  :DRILL_REPEATS_SINCE_FAIL: 1
+  :DRILL_TOTAL_REPEATS: 5
+  :DRILL_FAILURE_COUNT: 4
+  :DRILL_AVERAGE_QUALITY: 1.8
   :DRILL_EASE: 2.6
-  :DRILL_LAST_QUALITY: 5
-  :DRILL_LAST_REVIEWED: [2018-11-12 Mon 16:10]
+  :DRILL_LAST_QUALITY: 1
+  :DRILL_LAST_REVIEWED: [2018-12-09 Sun 13:15]
   :END:
 Define the word
 **** English
@@ -656,18 +659,18 @@ These are dazzling chapters, packed with perfectly chosen anecdotes and
 pithy with aphorism. -John Keegan
 
 *** Adjective                                                         :drill:
-    SCHEDULED: <2018-11-16 Fri>
+    SCHEDULED: <2018-12-22 Sat>
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
   :ID:       30bf1409-79d6-4346-a3b6-862f176b5eba
-  :DRILL_LAST_INTERVAL: 4.1335
-  :DRILL_REPEATS_SINCE_FAIL: 2
-  :DRILL_TOTAL_REPEATS: 4
+  :DRILL_LAST_INTERVAL: 12.8632
+  :DRILL_REPEATS_SINCE_FAIL: 3
+  :DRILL_TOTAL_REPEATS: 5
   :DRILL_FAILURE_COUNT: 3
-  :DRILL_AVERAGE_QUALITY: 2.5
-  :DRILL_EASE: 2.6
-  :DRILL_LAST_QUALITY: 5
-  :DRILL_LAST_REVIEWED: [2018-11-12 Mon 16:09]
+  :DRILL_AVERAGE_QUALITY: 2.6
+  :DRILL_EASE: 2.46
+  :DRILL_LAST_QUALITY: 3
+  :DRILL_LAST_REVIEWED: [2018-12-09 Sun 13:15]
   :END:
 Define the word
 **** English
@@ -694,18 +697,17 @@ notion
 the vagaries of a rather eccentric, elderly lady
 
 *** Noun                                                              :drill:
-    SCHEDULED: <2018-11-15 Thu>
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
   :ID:       db2fb4b1-66a4-45b2-a87f-2ebb586ed306
-  :DRILL_LAST_INTERVAL: 2.5679
-  :DRILL_REPEATS_SINCE_FAIL: 2
-  :DRILL_TOTAL_REPEATS: 3
-  :DRILL_FAILURE_COUNT: 2
+  :DRILL_LAST_INTERVAL: 0.0
+  :DRILL_REPEATS_SINCE_FAIL: 1
+  :DRILL_TOTAL_REPEATS: 4
+  :DRILL_FAILURE_COUNT: 3
   :DRILL_AVERAGE_QUALITY: 2.0
   :DRILL_EASE: 2.36
-  :DRILL_LAST_QUALITY: 3
-  :DRILL_LAST_REVIEWED: [2018-11-12 Mon 16:10]
+  :DRILL_LAST_QUALITY: 2
+  :DRILL_LAST_REVIEWED: [2018-12-09 Sun 13:14]
   :END:
 Define the word
 **** English
@@ -735,12 +737,12 @@ the soporific heat of the summer
   :ID:       9c6819e6-3c7e-4448-ab76-6fcf451ac5da
   :DRILL_LAST_INTERVAL: 0.0
   :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 2
-  :DRILL_FAILURE_COUNT: 1
-  :DRILL_AVERAGE_QUALITY: 3.0
+  :DRILL_TOTAL_REPEATS: 3
+  :DRILL_FAILURE_COUNT: 2
+  :DRILL_AVERAGE_QUALITY: 2.333
   :DRILL_EASE: 2.6
   :DRILL_LAST_QUALITY: 1
-  :DRILL_LAST_REVIEWED: [2018-11-12 Mon 16:12]
+  :DRILL_LAST_REVIEWED: [2018-12-09 Sun 13:12]
   :END:
 The headquarters of the Shanghai Public Security Bureau (PSB), a concrete building known as
 ["803"]
@@ -749,6 +751,14 @@ The headquarters of the Shanghai Public Security Bureau (PSB), a concrete buildi
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
   :ID:       40fd167e-3f5e-4e61-8ed4-8fb47445f2f5
+  :DRILL_LAST_INTERVAL: 0.0
+  :DRILL_REPEATS_SINCE_FAIL: 1
+  :DRILL_TOTAL_REPEATS: 1
+  :DRILL_FAILURE_COUNT: 1
+  :DRILL_AVERAGE_QUALITY: 1.0
+  :DRILL_EASE: 2.5
+  :DRILL_LAST_QUALITY: 1
+  :DRILL_LAST_REVIEWED: [2018-12-09 Sun 13:16]
   :END:
 Define the word
 **** English
@@ -1073,6 +1083,22 @@ b) trivial
 c) lazy, shiftless  e.g. a trifling fellow
 **** Example sentence
 Fortunately, the storm caused trifling damage to the boat.
+
+*** Adjective
+# :drill:
+  :PROPERTIES:
+  :DRILL_CARD_TYPE: twosided
+  :END:
+Define the word
+**** English
+mendacious
+**** Definition
+given to or characterized by deception or falsehood or divergance from absolute truth
+**** Example sentence
+mendacious tales of his adventures
+
+
+
 
 *** Fact
 # :drill:
